# cis476_app

./: .gitignore  Account.h  CMakeLists.txt  CMakeLists.txt.user.2dbfdae  CreditCard.qml  EditCreditCard.qml  EditIDCard.qml  EditSecureNoteInfo.qml  EditWebsiteInfo.qml  IDCard.qml  LoginPage.qml  Main.qml  Observer.h  README.md  RecoverPassPage.qml  RegisterUser.qml  Secret.h  Secrets.cpp  SecureNoteInfo.qml  SecurityQuestionHandler.cpp  SecurityQuestionHandler.h  SessionManager.h  WebsiteInfo.qml  copyhandler.h  databasehandler.cpp  databasehandler.h  login.h  main.cpp  notificationObservers.cpp  notificationObservers.h  passwordGenerator.h
